Bug 18672 - missing "break;" in cx23885-core.c
Summary: missing "break;" in cx23885-core.c
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_other
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-16 10:07 UTC by Igor
Modified: 2010-09-16 19:55 UTC (History)
1 user (show)

See Also:
Kernel Version:
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Igor 2010-09-16 10:07:14 UTC
File is drivers/media/video/cx23885/cx23885-core.c
Function is cx23885_dev_checkrevision()
Missing "break;" before "case 0x0f:"
Comment 1 Andrew Morton 2010-09-16 19:55:43 UTC
OK, I typed the patch in.  Next time email us a patch!

Note You need to log in before you can comment on or make changes to this bug.